--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
           <div class="quantity">(53)</div>
         </div>
 
-        <div class="frock">
+        <div class="frock" id="lens1">
           <div class="image" style="padding-top: 10px">
             <?xml version="1.0" encoding="iso-8859-1"?>
             <!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
@@ -302,7 +302,7 @@
           <div class="quantity">(58)</div>
         </div>
 
-        <div class="frock">
+        <div class="frock" id="lens">
           <div class="image" style="padding-top: 10px">
             <?xml version="1.0" encoding="iso-8859-1"?>
             <!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
@@ -385,7 +385,7 @@
           <div class="quantity">(68)</div>
         </div>
 
-        <div class="frock">
+        <div class="frock" id="lens">
           <div class="image">
             <?xml version="1.0" encoding="iso-8859-1"?>
             <!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
@@ -488,7 +488,7 @@
       <div class="heading1">
         <div class="new" >New Arrivals</div>
         <div class="new" style="margin-top: 60px;">Trending</div>
-        <div class="new" >Top Rated</div>
+        <div class="new" id="top" >Top Rated</div>
       </div>
       <div class="item-box2">
         <div class="item">
@@ -674,8 +674,8 @@
           <g>
           </g>
           </svg>
-          <p>Clothes</p></div>
-        <div class="footwear"><?xml version="1.0" encoding="iso-8859-1"?>
+          <p>Clothes</p><i class="fa fa-plus" aria-hidden="true" style="margin-left:128px;"></i></div>
+        <div class="clothes"><?xml version="1.0" encoding="iso-8859-1"?>
           <!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
           <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px" viewBox="0 0 448.02 448.02" style="enable-background:new 0 0 448.02 448.02;" xml:space="preserve" width="512" height="512">
           <g>
@@ -695,8 +695,8 @@
             <circle style="fill:#00416A;" cx="257.843" cy="214.945" r="7.501"/>
           </g>
           </svg>
-          <p>Footwear</p></div>
-        <div class="jewellry"><?xml version="1.0" encoding="iso-8859-1"?>
+          <p>Footwear</p><i class="fa fa-plus" aria-hidden="true" style="margin-left:116px;"></i></div>
+        <div class="clothes"><?xml version="1.0" encoding="iso-8859-1"?>
           <!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
           <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
              viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
@@ -764,8 +764,8 @@
           <g>
           </g>
           </svg>
-          <p>Jewellery</p></div>
-        <div class="perfume"><?xml version="1.0" encoding="iso-8859-1"?>
+          <p>Jewellery</p><i class="fa fa-plus" aria-hidden="true" style="margin-left:118px;"></i></div>
+        <div class="clothes"><?xml version="1.0" encoding="iso-8859-1"?>
           <!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
           <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
              viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
@@ -824,8 +824,8 @@
           <g>
           </g>
           </svg>
-          <p>Perfume</p></div>
-        <div class="cosmetics"><?xml version="1.0" encoding="iso-8859-1"?>
+          <p>Perfume</p><i class="fa fa-plus" aria-hidden="true" style="margin-left:123px;"></i></div>
+        <div class="clothes"><?xml version="1.0" encoding="iso-8859-1"?>
           <!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
           <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
              viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
@@ -882,8 +882,8 @@
           <g>
           </g>
           </svg>
-          <p>Cosmetic</p></div>
-        <div class="glasses"><?xml version="1.0" encoding="iso-8859-1"?>
+          <p>Cosmetic</p><i class="fa fa-plus" aria-hidden="true" style="margin-left:117px;"></i></div>
+        <div class="clothes"><?xml version="1.0" encoding="iso-8859-1"?>
           <!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
           <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
              viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
@@ -941,8 +941,8 @@
           <g>
           </g>
           </svg>
-          <p>Glasses</p></div>
-        <div class="bag"><?xml version="1.0" encoding="iso-8859-1"?>
+          <p>Glasses</p><i class="fa fa-plus" aria-hidden="true" style="margin-left:131px;"></i></div>
+        <div class="clothes"><?xml version="1.0" encoding="iso-8859-1"?>
           <!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
           <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
              viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
@@ -1030,13 +1030,13 @@
           <g>
           </g>
           </svg>
-          <p>Bags</p></div>
+          <p>Bags</p><i class="fa fa-plus" aria-hidden="true" style="margin-left:149px;"></i></div>
         </div>
         <div class="sidebar2">
-          <div class="headi">BEST SELLER</div>
+          <div class="headi" style="margin-top: 30px;">BEST SELLER</div>
             <div class="baby">
               <img src="images/products/1.jpg" alt="">
-          <div class="details"><div class="name">Baby fabric shoes</div>
+          <div class="details"><div class="name" style="margin-top: -5px;">Baby fabric shoes</div>
         <div class="rating"><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></div>
         <div class="price">$34.00 <span>$10.00</span></div>
       </div>
@@ -1098,7 +1098,7 @@
             </div>
             <div class="item">
                 <img src="images/products/shirt-1.jpg" alt="">
-                <div class="type">JACKET</div>
+                <div class="type">MENS'S FASHION</div>
                 <div class="item-name">Mens Winter Leather Jackets</div>
                 <div class="rating"><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></div>
                 <div class="price">$48.00 <span>$75.00</span></div>
@@ -1119,14 +1119,14 @@
             </div>
             <div class="item">
                 <img src="images/products/shoe-2.jpg" alt="">
-                <div class="type">JACKET</div>
+                <div class="type">SHOE</div>
                 <div class="item-name">Mens Winter Leather Jackets</div>
                 <div class="rating"><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></div>
                 <div class="price">$48.00 <span>$75.00</span></div>
             </div>
             <div class="item">
                 <img src="images/products/watch-3.jpg" alt="">
-                <div class="type">JACKET</div>
+                <div class="type">WATCH</div>
                 <div class="item-name">Mens Winter Leather Jackets</div>
                 <div class="rating"><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></div>
                 <div class="price">$48.00 <span>$75.00</span></div>
@@ -1140,7 +1140,7 @@
             </div>
             <div class="item">
                 <img src="images/products/party-wear-1.jpg" alt="">
-                <div class="type">JACKET</div>
+                <div class="type">PARTY WEAR</div>
                 <div class="item-name">Mens Winter Leather Jackets</div>
                 <div class="rating"><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></div>
                 <div class="price">$48.00 <span>$75.00</span></div>
@@ -1154,7 +1154,7 @@
             </div>
             <div class="item">
                 <img src="images/products/sports-2.jpg" alt="">
-                <div class="type">JACKET</div>
+                <div class="type">SPORTS</div>
                 <div class="item-name">Mens Winter Leather Jackets</div>
                 <div class="rating"><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></div>
                 <div class="price">$48.00 <span>$75.00</span></div>
@@ -1168,7 +1168,7 @@
             </div>
             <div class="item">
                 <img src="images/products/shorts-1.jpg" alt="">
-                <div class="type">JACKET</div>
+                <div class="type">SHORTS</div>
                 <div class="item-name">Mens Winter Leather Jackets</div>
                 <div class="rating"><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></div>
                 <div class="price">$48.00 <span>$75.00</span></div>
@@ -1196,38 +1196,38 @@
         </div>
         <div class="content2">
             <div class="heading" style="margin-top: -30px; padding-left: 5px;" ><h3>Our Services</h3></div>
-            <div class="head">Worldwide Deleivery</div>
-            <div class="des">For Order Over 100$</div>
-            <div class="head">Next Day Deleivery</div>
+            <div class="head"> <i class="fa fa-ship" aria-hidden="true"></i>Worldwide Deleivery</div>
+            <div class="des"> </i>For Order Over 100$</div>
+            <div class="head" ><i class="fa fa-rocket" aria-hidden="true"></i> Next Day Deleivery</div>
             <div class="des">UK orders only</div>
-            <div class="head">Best online support</div>
+            <div class="head" ><i class="fa fa-phone" aria-hidden="true"></i>Best online support</div>
             <div class="des">Hours 8AM - 11PM</div>
-            <div class="head">Return Policy</div>
+            <div class="head"><i class="fa fa-reply" aria-hidden="true"></i>Return Policy</div>
             <div class="des">Easy  & Free Return </div>
-            <div class="head">30% Money Bakc</div>
+            <div class="head"><i class="fa fa-money" aria-hidden="true"></i>30% Money Back</div>
             <div class="des">For Order over $100</div>
         </div>
     </div>
     <div class="last-box">
-        <div class="item" style="margin-left: 0px;">
+        <div class="item" style="margin-left: 0px;" >
             <img src="images/blog-1.jpg" alt="">
             <div class="type">Fashion</div>
             <div class="name">Clothes Retail KPIs Guide for Clothes Executives</div>
             <div class="date">By Mr Admin / Apr 06,2022</div>
         </div>
-        <div class="item">
+        <div class="item" id="last-box-item2">
             <img src="images/blog-2.jpg" alt="">
             <div class="type">Clothes</div>
             <div class="name">Curbside fashion Trends: How to Win the pickup Battle</div>
             <div class="date">By Mr Robin / Apr 18,2022</div>
         </div>
-        <div class="item">
+        <div class="item" id="sh">
             <img src="images/blog-3.jpg" alt="">
             <div class="type">Shoes</div>
             <div class="name">EBT vendors: Claim Your Share of SANP online Revenue</div>
             <div class="date">By Mr Selsa / Feb 06,2022</div>
         </div>
-        <div class="item">
+        <div class="item" id="sh">
             <img src="images/blog-4.jpg" alt="">
             <div class="type">Electonics</div>
             <div class="name">Curbside fashion Trends: How to Win the pickup Battle</div>
@@ -1239,10 +1239,10 @@
         <div class="fas"><span>FASHION:</span>  T-Shirt  |  Shirt  |      Shorts & Jeans     |     Jackets      |     Dress & Frock    |    Ibberwear     |    Hosiery</div>
         <div class="fas"><span>FOOTWEAR:</span> Sport  |  Formal |   Boots  |    Casual   |  Cowboy Shoes |      Safety Shoes     |    Branded  |  First Copy  | Long Shoes</div>
         <div class="fas"><span>JEWELLERY:</span> Necklace      |      Earrings  CoupleRing      |     Pendants     |     Crystal      |     Bangles      |      Bracelets      |       Nosepin</div>
-        <div class="fas"><span>COSMETICS:</span> Shampoo  |  Bodywash      |      Facewash       |      Makeupkit  |       Linear   |      Lipstick       |       Perfume  </div>
+        <div class="fas" id="cos"><span>COSMETICS:</span> Shampoo  |  Bodywash      |      Facewash       |      Makeupkit  |       Linear   |      Lipstick       |       Perfume  </div>
     </div>
     <div class="footer2">
-        <div class="popular" style="margin-left: 110px;">
+        <div class="popular" style="margin-left: 110px;" id="">
             <div class="heading">POPULAR CATEGORIES</div>
             <div class="i1">Fashion</div>
             <div class="i1">Electronic</div>
@@ -1266,7 +1266,7 @@
             <div class="i1">About us</div>
             <div class="i1">Secure Payment</div>
         </div>
-        <div class="popular">
+        <div class="popular"  id="pop">
             <div class="heading">SERVICES</div>
             <div class="i1">Price Drop</div>
             <div class="i1">New Products</div>
@@ -1274,7 +1274,7 @@
             <div class="i1">Contact Us</div>
             <div class="i1">Sitemap</div>
         </div>
-        <div class="popular">
+        <div class="popular" id="pop">
             <div class="heading">Contact</div>
             <div class="i1">419 State 414 Rte Beaver <br> Dams,New York(NY) ,14812, USA</div>
             <div class="i1">(607) 936-8058</div>
